2003-10-19  Theodore A. Roth  <troth@openavr.org>

	Released avr-libc-1.0.1.

2003-10-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.1.

2003-10-18  Theodore A. Roth  <troth@openavr.org>
[Fix for Bug #5976]

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.0.20031018.
	* NEWS: Add note warning mega162 users about fix for bug #5799.
	* doc/api/faq.dox: Use pgm_read_byte() instead of __lpm_inline() in the
	debug_P() example.
	* include/stdlib.h (itoa): Add note and warning about minimal buffer
	size to dox.
	(ltoa): Ditto.
	(utoa): Ditto.
	(ultoa): Ditto.

2003-10-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.0.20031017.
	* include/avr/iom162.h: Change PE[01] to UPE[01]. [Bug #5799]

2003-10-16  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Add note about new vfprintf_P and vfscanf_P functions.
	* include/stdio.h: Add prototypes and dox for vfprintf_P and vfscanf_P.
	* libc/stdio/Makefile.am (lib_a_c_sources): Add vfprintf_p.c and
	vfscanf_p.c.
	* libc/stdio/vfprintf_p.c: New file.
	* libc/stdio/vfscanf_p.c: New file.

2003-10-09  Theodore A. Roth  <troth@openavr.org>
[Submitted by Steven Borley <steven.borley@diode.demon.co.uk>]

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.0.20031009.

	* include/stdio.h: Escape '\' character in dox.
	* include/stdlib.h: Ditto.
	* libc/string/strcat.S: Ditto.
	* libc/string/strcpy.S: Ditto.
	* libc/string/strlen.S: Ditto.
	* libc/string/strnlen.S: Ditto.
	* libc/string/strstr.S: Ditto.

	* libc/string/strsep.S: Add \fn for function definition dox.
	Escape '\' character in dox.
	* libc/string/strtok_r.S: Ditto.

	* include/avr/signal.h: Add a space after \code in dox.

2003-10-08  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.0.20031008.
	* include/avr/sfr_defs.h: Use inttypes.h defined types to allow use
	with -mint8.
	[Submitted by Tomas Vanek <vanekt@fbl.cz>]
